10375 uts: NULL pointer issues in ip module Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Rob Johnston <rob.johnston@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>